# llm-evaluation-with-mlflow

./: README.md  evaluation.py  main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/0ed4775b8843405c9c3ab185865aab9a/: meta.yaml
mlruns/0/0ed4775b8843405c9c3ab185865aab9a/inputs/64ee850d1b05bb2785b33be84acd3927/: meta.yaml
mlruns/0/0ed4775b8843405c9c3ab185865aab9a/outputs/m-d6180bab67f34925bb5c896ee1391821/: meta.yaml
mlruns/0/0ed4775b8843405c9c3ab185865aab9a/tags/: mlflow.datasets  mlflow.runName
mlruns/0/bd3517d31d97498aa5188df59f44a9e3/: meta.yaml
mlruns/0/bd3517d31d97498aa5188df59f44a9e3/outputs/m-6c3e9d280d2d4863bdfe293ddcf036f6/: meta.yaml
mlruns/0/bd3517d31d97498aa5188df59f44a9e3/tags/: mlflow.runName
mlruns/0/datasets/624817797f164e59db23492fa229003f/: meta.yaml
mlruns/0/f3f91e390b1f446aabef849b84232aad/: meta.yaml
mlruns/0/f3f91e390b1f446aabef849b84232aad/inputs/554f13a6fc7f2cf6ec55de8477c1c52b/: meta.yaml
mlruns/0/f3f91e390b1f446aabef849b84232aad/tags/: mlflow.datasets  mlflow.runName
mlruns/0/models/m-6c3e9d280d2d4863bdfe293ddcf036f6/: meta.yaml
mlruns/0/models/m-6c3e9d280d2d4863bdfe293ddcf036f6/tags/: mlflow.source.git.commit
mlruns/0/models/m-b48f3e84f2824c238f2a882d9af3c364/: meta.yaml
mlruns/0/models/m-d6180bab67f34925bb5c896ee1391821/: meta.yaml
mlruns/0/traces/3aa148eeff464381b21b91130195dd17/: trace_info.yaml
mlruns/0/traces/9cda42601aab4469b71857e4cff11d9b/: trace_info.yaml
mlruns/0/traces/c485bd8499294626b1a9f0b3e4ab94c1/: trace_info.yaml
mlruns/0/traces/ccd70cda6423483c9a55a6a83f8b6693/: trace_info.yaml
(+20 files in other folders)
